--- a/view/public/index.html
+++ b/view/public/index.html
@@ -8,7 +8,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link href="https://fonts.googleapis.com/css2?family=Commissioner:wght@300;400;500&family=Creepster&display=swap" rel="stylesheet">    <!--
+    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500;700&family=Rakkas&family=Raleway&display=swap" rel="stylesheet">
+
+
+    <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
