push about to change machines

--- a/view/public/index.html
+++ b/view/public/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500;700&family=Rakkas&family=Raleway&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@200;400;500;700&family=Rakkas&family=Raleway&display=swap" rel="stylesheet">
 
 
     <!--
